# lacrei-saude-api

./: .coveragerc  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
apps/consultas/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
apps/consultas/migrations/: 0001_initial.py
apps/consultas/services/: assas_integration.py  consulta_service.py
apps/profissionais/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
apps/profissionais/migrations/: 0001_initial.py
core/: asgi.py  domain.py  exceptions.py  urls.py  views.py  wsgi.py
core/middleware/: correlation_middleware.py  logging_middleware.py  metrics_middleware.py
core/settings/: base.py  production.py  staging.py
core/utils/: sanitization.py
scripts/: make_migrations.py
